[package]
name = "zkgo_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { path = "../../risc0/zkvm" }
serde = "1.0"
zkgo-wasm-methods = { path = "methods" }
wat = "<1.0.72"
clap = "3.2.25"
log = "0.4.20"
ark-std = { version = "0.3.0", features = ["print-trace"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
